Clases eliminación directa con clase manejarSeleccion